# cloud-alert-hub

./: .env.example  .gitignore  .manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEBUG_RUNBOOK.md  DEPLOY_AWS.md  DEPLOY_AZURE.md  DEPLOY_GCP.md  FEATURES.md  QUICKSTART.md  RECIPES.md  SAMPLE_OUTPUT.md  SCENARIOS.md
examples/: README.md
examples/aws-lambda/: README.md  config.yaml  deploy.sh  lambda_function.py  requirements.txt
examples/gcp-cloud-function/: README.md  config.yaml  deploy.sh  main.py  requirements.txt
examples/local-dev/: README.md  app.py  config.yaml  requirements.txt
examples/payloads/: aws-cost-anomaly-sns.json  aws-sns-event.json  gcp-billing-budget-native.json  gcp-cost-spike-monitoring-incident.json  gcp-infrastructure-spike-monitoring-incident.json  gcp-pubsub-envelope.json  gcp-security-audit-monitoring-incident.json  generic-budget-alert.json  generic-cost-spike.json  generic-infrastructure-spike.json  generic-security-audit.json  generic-service-slo.json
src/cloud_alert_hub/: __init__.py  api.py  bundled_defaults.yaml  config.py  deadletter.py  manifest.py  models.py  policy.py  processor.py  renderer.py  security.py  state.py  telemetry.py
src/cloud_alert_hub/adapters/: __init__.py  aws_sns.py  azure_eventgrid.py  gcp_pubsub.py  generic.py
src/cloud_alert_hub/features/: __init__.py  base.py  budget.py  cost_spike.py  infrastructure.py  security_audit.py  service_slo.py
src/cloud_alert_hub/notifiers/: __init__.py  email.py  slack.py
src/cloud_alert_hub/tools/: __init__.py  preview_slack.py
tests/: test_config.py  test_documentation.py  test_features.py  test_gcp_adapter.py  test_manifest.py  test_preview_slack.py  test_public_api.py  test_renderer.py  test_repo_hygiene.py  test_state_backend.py
